Isabelle NEWS -- history of user-relevant changes
=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** General ***

* Command "open_bundle b" is like "bundle b" followed by "unbundle b",
so its declarations are applied immediately, but also named for later
re-use.

* Inner syntax translations now support formal dependencies via commands
'syntax_types' or 'syntax_consts'. This is essentially an abstract
specification of the effect of 'translations' (or translation functions
in ML). Most Isabelle theories have been adapted accordingly, such that
hyperlinks work properly e.g. for "['a, 'b] \<Rightarrow> 'c" or "\<lbrakk>A; B\<rbrakk> \<Longrightarrow> C" in
Pure, and "\<forall>x\<in>A. B x" or "\<exists>x\<in>A. B x" in HOL.

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name). See also
~~/src/HOL/Imperative_HOL/ex/Congproc_Ex.thy for further explanations
and examples.

* The attribute "cong_format" produces the internal format of Simplifier
"cong" rules, notably for congproc implementations.


*** Isabelle/VSCode Prover IDE ***

* General improvements: Persistent decorations for PIDE markup, correct
  font and formatting in panels, and proper completions.
  Moreover, the PIDE extension of the LSP now features additional
  protocol messages (e.g. to obtain the set of Isabelle symbols) and
  more fine-grained control for unicode symbols.

* Active "sendback" markup can now be used via LSP code actions, e.g.
  to insert proof methods from Sledgehammer output.

* Relevant Isabelle options can now be overriden from the
  Isabelle/VSCode extension settings.


*** HOL ***

* Various declaration bundles support adhoc modification of notation,
notably like this:

  unbundle no_list_syntax
  unbundle no_listcompr_syntax