@@ -534,7 +534,7 @@ instantiation pmf :: (random) random
 begin
 
 context
-  includes state_combinator_syntax term_syntax
+  includes state_combinator_syntax and term_syntax
 begin
 
 definition
