@@ -17,6 +17,7 @@ sig
   val specification:
     ((binding * string option * mixfix) list * Specification.multi_specs_cmd) parser
   val constdecl: (binding * string option * mixfix) parser
+  val bundles: (xstring * Position.T) list parser
   val includes: (xstring * Position.T) list parser
   val opening: (xstring * Position.T) list parser
   val locale_fixes: (binding * string option * mixfix) list parser
@@ -81,11 +82,16 @@ val constdecl =
   >> Scan.triple2;
 
 
+(* bundles *)
+
+val bundles = Parse.and_list1 Parse.name_position;
+
+val includes = Parse.$$$ "includes" |-- Parse.!!! bundles;
+
+val opening = Parse.$$$ "opening" |-- Parse.!!! bundles;
+
+
 (* locale and context elements *)
-
-val includes = Parse.$$$ "includes" |-- Parse.!!! (Scan.repeat1 Parse.name_position);
-
-val opening = Parse.$$$ "opening" |-- Parse.!!! (Scan.repeat1 Parse.name_position);
 
 val locale_fixes =
   Parse.and_list1 (Parse.binding -- Scan.option (Parse.$$$ "::" |-- Parse.typ) -- Parse.mixfix
